libs/modkit-db-macros/tests/ui/err_unrestricted_with_resource.stderr
error: Cannot use 'resource_col' with 'unrestricted'
 --> tests/ui/err_unrestricted_with_resource.rs:6:24
  |
6 | #[secure(unrestricted, resource_col = "id")]
  |                        ^^^^^^^^^^^^
